--- a/expense/Backend/.env
+++ b/expense/Backend/.env
@@ -1,1 +1,1 @@
-mongoUrl=mongodb+srv://amisha1:<db_password>@cluster0.5b8ttzk.mongodb.net/expense_tracker
+mongoUrl=mongodb+srv://amisha1:12345Spotify@cluster0.5b8ttzk.mongodb.net/expense_tracker
