--- a/expense/Backend/package.json
+++ b/expense/Backend/package.json
@@ -29,7 +29,7 @@
     "es-errors": "^1.3.0",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
-    "express": "^5.0.0-beta.2",
+    "express": "^5.0.1",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
@@ -91,7 +91,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
